...
                      .updateSearchQuery('');
                  ref
                      .read(searchBarVisibilityProvider.notifier)
                      .toggleSearchBool();
                }),
            PopupMenuButton<String>(
              key: const ValueKey('languageMenu'),
              color: Theme.of(context).colorScheme.primaryContainer,
              elevation: 0,
              icon: const Icon(Icons.language),
              //in case of more languages they can be moved to the list that would be used to create the items
              itemBuilder: (BuildContext context) => <PopupMenuEntry<String>>[
                PopupMenuItem<String>(
...
                  if (!context.mounted) return;
                  MyApp.setLocale(context, locale!);
                }
              },
            ),
            IconButton(
              key:const ValueKey('mainAddHiveButton'),
              icon: const Icon(Icons.add),
              onPressed: () {
                _showAddHiveModal(context);
              },
            ),
          ],
...
